@@ -5,9 +5,9 @@ import com.codingas.gateway.application.model.dto.ModelQueryRequest;
 import com.codingas.gateway.application.model.dto.ModelResponse;
 import com.codingas.gateway.application.model.dto.ModelUpdateRequest;
 import com.codingas.gateway.common.dto.PageResponse;
+import com.codingas.gateway.domain.model.enums.ModelState;
 import com.codingas.gateway.common.exception.ResourceNotFoundException;
 import com.codingas.gateway.domain.model.entity.Model;
-import com.codingas.gateway.domain.model.entity.Model.ModelStatus;
 import com.codingas.gateway.domain.model.entity.Provider;
 import com.codingas.gateway.domain.model.gateway.ModelGateway;
 import com.codingas.gateway.domain.model.gateway.ProviderGateway;
@@ -24,7 +24,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -56,7 +55,7 @@ class ModelServiceTest {
     @BeforeEach
     void setUp() {
         testProvider = createTestProvider(1L, "OpenAI");
-        testModel = createTestModel(1L, "gpt-4", testProvider, "GPT-4", ModelStatus.ACTIVE);
+        testModel = createTestModel(1L, "gpt-4", testProvider, "GPT-4", true);
     }
 
     // ==================== create 测试 ====================
@@ -96,8 +95,8 @@ class ModelServiceTest {
             assertThat(response.getContextWindow()).isEqualTo(128000);
             assertThat(response.getInputPrice()).isEqualTo(new BigDecimal("0.000005"));
             assertThat(response.getOutputPrice()).isEqualTo(new BigDecimal("0.000015"));
-            assertThat(response.getStatus()).isEqualTo(ModelStatus.ACTIVE);
-            assertThat(response.getEnabled()).isTrue();
+            assertThat(response.getState()).isEqualTo(ModelState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ModelState.ACTIVE);
 
             verify(providerGateway).findById(1L);
             verify(modelGateway).save(any(Model.class));
@@ -144,8 +143,8 @@ class ModelServiceTest {
             assertThat(response.getProviderId()).isEqualTo(1L);
             assertThat(response.getProviderName()).isEqualTo("OpenAI");
             assertThat(response.getDisplayName()).isEqualTo("GPT-4");
-            assertThat(response.getStatus()).isEqualTo(ModelStatus.ACTIVE);
-            assertThat(response.getEnabled()).isTrue();
+            assertThat(response.getState()).isEqualTo(ModelState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ModelState.ACTIVE);
 
             verify(modelGateway).findById(1L);
         }
@@ -177,7 +176,7 @@ class ModelServiceTest {
         void query_noFilter_returnsAllModels() {
             // given
             Provider provider2 = createTestProvider(2L, "Anthropic");
-            Model model2 = createTestModel(2L, "claude-3-opus", provider2, "Claude 3 Opus", ModelStatus.ACTIVE);
+            Model model2 = createTestModel(2L, "claude-3-opus", provider2, "Claude 3 Opus", true);
 
             when(modelGateway.findAll()).thenReturn(List.of(testModel, model2));
 
@@ -257,7 +256,7 @@ class ModelServiceTest {
         void query_withProviderId_filtersModels() {
             // given
             Provider provider2 = createTestProvider(2L, "Anthropic");
-            Model model2 = createTestModel(2L, "claude-3-opus", provider2, "Claude 3 Opus", ModelStatus.ACTIVE);
+            Model model2 = createTestModel(2L, "claude-3-opus", provider2, "Claude 3 Opus", true);
 
             when(modelGateway.findAll()).thenReturn(List.of(testModel, model2));
 
@@ -279,12 +278,12 @@ class ModelServiceTest {
         void query_withStatusActive_filtersModels() {
             // given
             Provider provider2 = createTestProvider(2L, "Anthropic");
-            Model model2 = createTestModel(2L, "claude-3-opus", provider2, "Claude 3 Opus", ModelStatus.DEPRECATED);
+            Model model2 = createTestModel(2L, "claude-3-opus", provider2, "Claude 3 Opus", false);
 
             when(modelGateway.findAll()).thenReturn(List.of(testModel, model2));
 
             ModelQueryRequest request = new ModelQueryRequest();
-            request.setStatus(ModelStatus.ACTIVE);
+            request.setState(ModelState.ACTIVE);
             request.setPage(1);
             request.setLimit(20);
 
@@ -293,7 +292,7 @@ class ModelServiceTest {
 
             // then
             assertThat(response.getItems()).hasSize(1);
-            assertThat(response.getItems().get(0).getStatus()).isEqualTo(ModelStatus.ACTIVE);
+            assertThat(response.getItems().getFirst().getState()).isEqualTo(ModelState.ACTIVE);
         }
 
         @Test
@@ -303,7 +302,7 @@ class ModelServiceTest {
             List<Model> models = new ArrayList<>();
             for (long i = 1; i <= 25; i++) {
                 Provider provider = createTestProvider(i, "Provider " + i);
-                models.add(createTestModel(i, "model-" + i, provider, "Model " + i, ModelStatus.ACTIVE));
+                models.add(createTestModel(i, "model-" + i, provider, "Model " + i, true));
             }
             when(modelGateway.findAll()).thenReturn(models);
 
@@ -371,12 +370,12 @@ class ModelServiceTest {
         @DisplayName("更新 enabled=true 设置状态为 ACTIVE")
         void update_enabledTrue_setsStatusActive() {
             // given
-            testModel.setStatus(ModelStatus.DEPRECATED);
+            testModel.setState(ModelState.ACTIVE);
             when(modelGateway.findById(1L)).thenReturn(Optional.of(testModel));
             when(modelGateway.save(any(Model.class))).thenReturn(testModel);
 
             ModelUpdateRequest request = new ModelUpdateRequest();
-            request.setEnabled(true);
+            request.setState(ModelState.ACTIVE);
 
             // when
             modelService.update(1L, request);
@@ -384,7 +383,7 @@ class ModelServiceTest {
             // then
             ArgumentCaptor<Model> modelCaptor = ArgumentCaptor.forClass(Model.class);
             verify(modelGateway).save(modelCaptor.capture());
-            assertThat(modelCaptor.getValue().getStatus()).isEqualTo(ModelStatus.ACTIVE);
+            assertThat(modelCaptor.getValue().getState()).isEqualTo(ModelState.ACTIVE);
         }
 
         @Test
@@ -415,15 +414,13 @@ class ModelServiceTest {
         void delete_existingModel_softDeletes() {
             // given
             when(modelGateway.findById(1L)).thenReturn(Optional.of(testModel));
-            when(modelGateway.save(any(Model.class))).thenReturn(testModel);
+            doNothing().when(modelGateway).delete(any(Model.class));
 
             // when
             modelService.delete(1L);
 
             // then
-            ArgumentCaptor<Model> modelCaptor = ArgumentCaptor.forClass(Model.class);
-            verify(modelGateway).save(modelCaptor.capture());
-            assertThat(testModel.getDeletedAt()).isNotNull();
+            verify(modelGateway).delete(any(Model.class));
         }
 
         @Test
@@ -452,7 +449,7 @@ class ModelServiceTest {
         @DisplayName("启用模型成功")
         void setEnabled_true_activatesModel() {
             // given
-            testModel.setStatus(ModelStatus.DEPRECATED);
+            testModel.setState(ModelState.ACTIVE);
             when(modelGateway.findById(1L)).thenReturn(Optional.of(testModel));
             when(modelGateway.save(any(Model.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
@@ -460,9 +457,9 @@ class ModelServiceTest {
             ModelResponse response = modelService.setEnabled(1L, true);
 
             // then
-            assertThat(testModel.getStatus()).isEqualTo(ModelStatus.ACTIVE);
-            assertThat(response.getStatus()).isEqualTo(ModelStatus.ACTIVE);
-            assertThat(response.getEnabled()).isTrue();
+            assertThat(testModel.getState()).isEqualTo(ModelState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ModelState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ModelState.ACTIVE);
             verify(modelGateway).save(testModel);
         }
 
@@ -470,7 +467,7 @@ class ModelServiceTest {
         @DisplayName("禁用模型成功")
         void setEnabled_false_deprecatesModel() {
             // given
-            testModel.setStatus(ModelStatus.ACTIVE);
+            testModel.setState(ModelState.ACTIVE);
             when(modelGateway.findById(1L)).thenReturn(Optional.of(testModel));
             when(modelGateway.save(any(Model.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
@@ -478,9 +475,8 @@ class ModelServiceTest {
             ModelResponse response = modelService.setEnabled(1L, false);
 
             // then
-            assertThat(testModel.getStatus()).isEqualTo(ModelStatus.DEPRECATED);
-            assertThat(response.getStatus()).isEqualTo(ModelStatus.DEPRECATED);
-            assertThat(response.getEnabled()).isFalse();
+            assertThat(testModel.getState()).isEqualTo(ModelState.DISABLED);
+            assertThat(response.getState()).isEqualTo(ModelState.DISABLED);
             verify(modelGateway).save(testModel);
         }
 
@@ -503,22 +499,22 @@ class ModelServiceTest {
     private Provider createTestProvider(Long id, String providerName) {
         Provider provider = new Provider();
         provider.setId(id);
-        provider.setProviderName(providerName);
+        provider.setName(providerName);
         return provider;
     }
 
-    private Model createTestModel(Long id, String providerModelId, Provider provider, String displayName, ModelStatus status) {
+    private Model createTestModel(Long id, String providerModelId, Provider provider, String displayName, Boolean status) {
         Model model = new Model();
         model.setId(id);
         model.setProviderId(provider.getId());
-        model.setProviderName(provider.getProviderName());
+        model.setProviderName(provider.getName());
         model.setProviderModelId(providerModelId);
         model.setDisplayName(displayName);
         model.setContextWindow(8000);
         model.setInputPrice(new BigDecimal("0.00003"));
         model.setOutputPrice(new BigDecimal("0.00006"));
         model.setCapabilities(Map.of("vision", false, "function_calling", true));
-        model.setStatus(status);
+        model.setState(status ? ModelState.ACTIVE : ModelState.DISABLED);
         model.setCreatedAt(Instant.now());
         model.setUpdatedAt(Instant.now());
         return model;
