@@ -5,12 +5,12 @@ import com.codingas.gateway.application.provider.dto.ProviderQueryRequest;
 import com.codingas.gateway.application.provider.dto.ProviderResponse;
 import com.codingas.gateway.application.provider.dto.ProviderUpdateRequest;
 import com.codingas.gateway.common.dto.PageResponse;
-import com.codingas.gateway.common.enums.ProviderType;
-import com.codingas.gateway.common.exception.DuplicateResourceException;
+import com.codingas.gateway.domain.model.enums.ProviderState;
+import com.codingas.gateway.domain.model.enums.ProviderType;
 import com.codingas.gateway.common.exception.ResourceNotFoundException;
 import com.codingas.gateway.domain.model.entity.Provider;
-import com.codingas.gateway.domain.model.entity.Provider.ProviderStatus;
 import com.codingas.gateway.domain.model.gateway.ProviderGateway;
+import com.codingas.gateway.domain.model.gateway.ProviderApiKeyGateway;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -40,6 +40,9 @@ class ProviderServiceTest {
     @Mock
     private ProviderGateway providerGateway;
 
+    @Mock
+    private ProviderApiKeyGateway providerApiKeyGateway;
+
     @InjectMocks
     private ProviderServiceImpl providerService;
 
@@ -47,7 +50,7 @@ class ProviderServiceTest {
 
     @BeforeEach
     void setUp() {
-        testProvider = createTestProvider(1L, "OpenAI", ProviderType.OPENAI, ProviderStatus.ACTIVE);
+        testProvider = createTestProvider(1L, "OpenAI", ProviderType.OPENAI, true);
     }
 
     // ==================== create 测试 ====================
@@ -81,8 +84,7 @@ class ProviderServiceTest {
             assertThat(response.getProviderName()).isEqualTo("Anthropic");
             assertThat(response.getProviderType()).isEqualTo(ProviderType.ANTHROPIC);
             assertThat(response.getPriority()).isEqualTo(50);
-            assertThat(response.getStatus()).isEqualTo(ProviderStatus.ACTIVE);
-            assertThat(response.getEnabled()).isTrue();
+            assertThat(response.getState()).isEqualTo(ProviderState.ACTIVE);
             verify(providerGateway).save(any(Provider.class));
         }
 
@@ -157,7 +159,7 @@ class ProviderServiceTest {
         @DisplayName("无过滤条件时返回所有提供商")
         void query_noFilter_returnsAllProviders() {
             // given
-            Provider provider2 = createTestProvider(2L, "Anthropic", ProviderType.ANTHROPIC, ProviderStatus.ACTIVE);
+            Provider provider2 = createTestProvider(2L, "Anthropic", ProviderType.ANTHROPIC, true);
             when(providerGateway.findAll()).thenReturn(List.of(testProvider, provider2));
 
             ProviderQueryRequest request = new ProviderQueryRequest();
@@ -195,7 +197,7 @@ class ProviderServiceTest {
         @DisplayName("关键字按代码或名称匹配")
         void query_keywordMatchesCodeOrName() {
             // given
-            Provider provider2 = createTestProvider(2L, "Google AI", ProviderType.OPENAI, ProviderStatus.ACTIVE);
+            Provider provider2 = createTestProvider(2L, "Google AI", ProviderType.OPENAI, true);
             when(providerGateway.findAll()).thenReturn(List.of(testProvider, provider2));
 
             ProviderQueryRequest request = new ProviderQueryRequest();
@@ -234,11 +236,11 @@ class ProviderServiceTest {
         @DisplayName("按状态过滤提供商")
         void query_withStatus_filtersProviders() {
             // given
-            Provider suspendedProvider = createTestProvider(2L, "Suspended Provider", ProviderType.OPENAI, ProviderStatus.SUSPENDED);
+            Provider suspendedProvider = createTestProvider(2L, "Suspended Provider", ProviderType.OPENAI, false);
             when(providerGateway.findAll()).thenReturn(List.of(testProvider, suspendedProvider));
 
             ProviderQueryRequest request = new ProviderQueryRequest();
-            request.setStatus(ProviderStatus.SUSPENDED);
+            request.setState(ProviderState.ACTIVE);
             request.setPage(1);
             request.setLimit(20);
 
@@ -247,7 +249,7 @@ class ProviderServiceTest {
 
             // then
             assertThat(response.getItems()).hasSize(1);
-            assertThat(response.getItems().get(0).getStatus()).isEqualTo(ProviderStatus.SUSPENDED);
+            assertThat(response.getItems().getFirst().getState()).isEqualTo(ProviderState.ACTIVE);
         }
 
         @Test
@@ -256,7 +258,7 @@ class ProviderServiceTest {
             // given
             List<Provider> providers = new ArrayList<>();
             for (long i = 1; i <= 25; i++) {
-                providers.add(createTestProvider(i, "Provider " + i, ProviderType.OPENAI, ProviderStatus.ACTIVE));
+                providers.add(createTestProvider(i, "Provider " + i, ProviderType.OPENAI, true));
             }
             when(providerGateway.findAll()).thenReturn(providers);
 
@@ -298,13 +300,13 @@ class ProviderServiceTest {
         @DisplayName("组合过滤条件")
         void query_combinedFilters_appliesAllFilters() {
             // given
-            Provider provider2 = createTestProvider(2L, "Anthropic", ProviderType.ANTHROPIC, ProviderStatus.ACTIVE);
-            Provider suspendedProvider = createTestProvider(3L, "Suspended Provider", ProviderType.ANTHROPIC, ProviderStatus.SUSPENDED);
+            Provider provider2 = createTestProvider(2L, "Anthropic", ProviderType.ANTHROPIC, true);
+            Provider suspendedProvider = createTestProvider(3L, "Suspended Provider", ProviderType.ANTHROPIC, false);
             when(providerGateway.findAll()).thenReturn(List.of(testProvider, provider2, suspendedProvider));
 
             ProviderQueryRequest request = new ProviderQueryRequest();
             request.setProviderType(ProviderType.ANTHROPIC);
-            request.setStatus(ProviderStatus.ACTIVE);
+            request.setState(ProviderState.ACTIVE);
             request.setPage(1);
             request.setLimit(20);
 
@@ -313,8 +315,8 @@ class ProviderServiceTest {
 
             // then
             assertThat(response.getItems()).hasSize(1);
-            assertThat(response.getItems().get(0).getProviderType()).isEqualTo(ProviderType.ANTHROPIC);
-            assertThat(response.getItems().get(0).getStatus()).isEqualTo(ProviderStatus.ACTIVE);
+            assertThat(response.getItems().getFirst().getProviderType()).isEqualTo(ProviderType.ANTHROPIC);
+            assertThat(response.getItems().getFirst().getState()).isEqualTo(ProviderState.ACTIVE);
         }
     }
 
@@ -357,7 +359,7 @@ class ProviderServiceTest {
             ProviderResponse response = providerService.update(1L, request);
 
             // then
-            assertThat(testProvider.getProviderType()).isEqualTo(ProviderType.ANTHROPIC);
+            assertThat(testProvider.getType()).isEqualTo(ProviderType.ANTHROPIC);
             verify(providerGateway).save(testProvider);
         }
 
@@ -365,19 +367,19 @@ class ProviderServiceTest {
         @DisplayName("更新提供商启用状态成功")
         void update_enabledTrue_setsActiveStatus() {
             // given
-            testProvider.setStatus(ProviderStatus.SUSPENDED);
+            testProvider.setState(ProviderState.ACTIVE);
             when(providerGateway.findById(1L)).thenReturn(Optional.of(testProvider));
             when(providerGateway.save(any(Provider.class))).thenReturn(testProvider);
 
             ProviderUpdateRequest request = new ProviderUpdateRequest();
-            request.setEnabled(true);
+            request.setState(ProviderState.ACTIVE);
 
             // when
             ProviderResponse response = providerService.update(1L, request);
 
             // then
-            assertThat(testProvider.getStatus()).isEqualTo(ProviderStatus.ACTIVE);
-            assertThat(response.getEnabled()).isTrue();
+            assertThat(testProvider.getState()).isEqualTo(ProviderState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ProviderState.ACTIVE);
         }
 
         @Test
@@ -388,14 +390,14 @@ class ProviderServiceTest {
             when(providerGateway.save(any(Provider.class))).thenReturn(testProvider);
 
             ProviderUpdateRequest request = new ProviderUpdateRequest();
-            request.setEnabled(false);
+            request.setState(ProviderState.ACTIVE);
 
             // when
             ProviderResponse response = providerService.update(1L, request);
 
             // then
-            assertThat(testProvider.getStatus()).isEqualTo(ProviderStatus.SUSPENDED);
-            assertThat(response.getEnabled()).isFalse();
+            assertThat(testProvider.getState()).isEqualTo(ProviderState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ProviderState.ACTIVE);
         }
 
         @Test
@@ -420,18 +422,16 @@ class ProviderServiceTest {
     class DeleteTests {
 
         @Test
-        @DisplayName("删除提供商成功（软删除）")
-        void delete_existingProvider_softDeletes() {
+        @DisplayName("删除提供商成功")
+        void delete_existingProvider_deletes() {
             // given
             when(providerGateway.findById(1L)).thenReturn(Optional.of(testProvider));
-            when(providerGateway.save(any(Provider.class))).thenReturn(testProvider);
 
             // when
             providerService.delete(1L);
 
             // then
-            assertThat(testProvider.getDeletedAt()).isNotNull();
-            verify(providerGateway).save(testProvider);
+            verify(providerGateway).delete(testProvider);
         }
 
         @Test
@@ -456,7 +456,7 @@ class ProviderServiceTest {
         @DisplayName("启用提供商成功")
         void setEnabled_true_enablesProvider() {
             // given
-            testProvider.setStatus(ProviderStatus.SUSPENDED);
+            testProvider.setState(ProviderState.ACTIVE);
             when(providerGateway.findById(1L)).thenReturn(Optional.of(testProvider));
             when(providerGateway.save(any(Provider.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
@@ -464,8 +464,8 @@ class ProviderServiceTest {
             ProviderResponse response = providerService.setEnabled(1L, true);
 
             // then
-            assertThat(testProvider.getStatus()).isEqualTo(ProviderStatus.ACTIVE);
-            assertThat(response.getEnabled()).isTrue();
+            assertThat(testProvider.getState()).isEqualTo(ProviderState.ACTIVE);
+            assertThat(response.getState()).isEqualTo(ProviderState.ACTIVE);
             verify(providerGateway).save(testProvider);
         }
 
@@ -480,8 +480,8 @@ class ProviderServiceTest {
             ProviderResponse response = providerService.setEnabled(1L, false);
 
             // then
-            assertThat(testProvider.getStatus()).isEqualTo(ProviderStatus.SUSPENDED);
-            assertThat(response.getEnabled()).isFalse();
+            assertThat(testProvider.getState()).isEqualTo(ProviderState.DISABLED);
+            assertThat(response.getState()).isEqualTo(ProviderState.DISABLED);
             verify(providerGateway).save(testProvider);
         }
 
@@ -500,16 +500,16 @@ class ProviderServiceTest {
     // ==================== 辅助方法 ====================
 
     private Provider createTestProvider(Long id, String providerName,
-                                        ProviderType providerType, ProviderStatus status) {
+                                        ProviderType providerType, Boolean active) {
         Provider provider = new Provider();
         provider.setId(id);
-        provider.setProviderName(providerName);
-        provider.setProviderType(providerType);
+        provider.setName(providerName);
+        provider.setType(providerType);
         provider.setBaseUrl("https://api.example.com");
         provider.setWebsiteUrl("https://example.com");
         provider.setApiDocUrl("https://docs.example.com");
         provider.setPriority(100);
-        provider.setStatus(status);
+        provider.setState(active ? ProviderState.ACTIVE : ProviderState.DISABLED);
         provider.setCreatedAt(Instant.now());
         provider.setUpdatedAt(Instant.now());
         return provider;
